@@ -44,10 +44,10 @@ import wtfplugin.preferences.WTFPreferences;
 
 public class LaunchTomcat extends ActionDelegate implements IWorkbenchWindowActionDelegate {
 	
-	private static String contextxml = null;
+	protected static String contextxml = null;
 	
-	private static String serverxml = null; 
-	private static byte keystore[];
+	protected static String serverxml = null; 
+	protected static byte keystore[];
 	
 
 	public LaunchTomcat() {
@@ -116,178 +116,14 @@ public class LaunchTomcat extends ActionDelegate implements IWorkbenchWindowActi
 	}
 
 	public static void launchTomcat(IProject project, String webappname, String port, String httpsPort, String serverPort, String contextContent, String jvmArgs) throws CoreException, IOException, JavaModelException {
-		
-		IProcess process= DebugUITools.getCurrentProcess();
-		if (process != null && process.getLaunch().getLaunchConfiguration().getName().equals("Start Tomcat")) {
-			process.terminate();
-		}
-			
-		
-		File file;
-		ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();
-		ILaunchConfigurationType type = manager.getLaunchConfigurationType(IJavaLaunchConfigurationConstants.ID_JAVA_APPLICATION);
-		ILaunchConfiguration[] configurations = manager.getLaunchConfigurations(type);
-		for (int i = 0; i < configurations.length; i++) {
-			ILaunchConfiguration configuration = configurations[i];
-			if (configuration.getName().equals("Start Tomcat")) {
-				configuration.delete();
-				break;
-			}
-		}
-		IVMInstall jre = JavaRuntime.getDefaultVMInstall();
-		File jdkHome = jre.getInstallLocation();
-		ILaunchConfigurationWorkingCopy workingCopy = type.newInstance(null, "Start Tomcat");
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_VM_INSTALL_NAME, jre.getName());
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_VM_INSTALL_TYPE, jre.getVMInstallType().getId());
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_MAIN_TYPE_NAME, "org.apache.catalina.startup.Bootstrap");
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_PROGRAM_ARGUMENTS, "-config "+System.getProperty("java.io.tmpdir") + "/temp_server.xml"+" start");
-		IPath toolsPath = new Path(jdkHome.getAbsolutePath()).append("lib").append("tools.jar");
-		IRuntimeClasspathEntry toolsEntry = JavaRuntime.newArchiveRuntimeClasspathEntry(toolsPath);
-		toolsEntry.setClasspathProperty(IRuntimeClasspathEntry.USER_CLASSES);
-		IPath bootstrapPath = new Path("TOMCAT6_HOME").append("bin").append("bootstrap.jar");
-		IRuntimeClasspathEntry bootstrapEntry = JavaRuntime.newVariableRuntimeClasspathEntry(bootstrapPath);
-		bootstrapEntry.setClasspathProperty(IRuntimeClasspathEntry.USER_CLASSES);
-		IPath systemLibsPath = new Path(JavaRuntime.JRE_CONTAINER);
-		IRuntimeClasspathEntry systemLibsEntry = JavaRuntime.newRuntimeContainerClasspathEntry(systemLibsPath, IRuntimeClasspathEntry.STANDARD_CLASSES);
-		List classpath = new ArrayList();
-		classpath.add(toolsEntry.getMemento());
-		classpath.add(bootstrapEntry.getMemento());
-		classpath.add(systemLibsEntry.getMemento());
-
-		addTomcatJarToClasspath(classpath, "jsp-api.jar");
-		addTomcatJarToClasspath(classpath, "el-api.jar");
-		
-		if (project == null || !project.exists() || !project.isAccessible() || !project.isOpen()) {
-			Activator.showErrorMessage("Tomcat", "No se ha encontrado ningun projecto web");
-			return;
-		}
-		
-		
-		file = project.getFolder("src").getRawLocation().toFile().getParentFile();
-		String appBase = file.toString();
-		
-		String docBase = file.toString();
-		
-		String docbase =docBase + "/src/main/webapp";
-		String workdir =docBase + "/src/main/webapp/work";
-		
-		// Borro el keystore viejo
-		org.apache.commons.io.FileUtils.deleteQuietly(new File(System.getProperty("user.home") + "/.keystoreWTF"));
-		if (keystore == null) {
-			InputStream is = LaunchTomcat.class.getResourceAsStream("keystoreWTF");
-			keystore = IOUtils.toByteArray(is);
-			is.close();
-		}
-		File keystoreFile = new File(System.getProperty("user.home") + "/.keystoreWTF");
-		org.apache.commons.io.FileUtils.writeByteArrayToFile(keystoreFile, keystore);
-		
-		// Excribo el context.xml
-		File contextDir = JavaCore.getClasspathVariable("TOMCAT6_HOME").toFile();
-		org.apache.commons.io.FileUtils.deleteQuietly(new File(contextDir + "/conf/context.xml"));
-		if (true || contextxml== null) {
-			InputStream is = LaunchTomcat.class.getResourceAsStream("context.xml");
-			String tempServer = IOUtils.toString(is);
-			contextxml = tempServer;
-			is.close();
-		}
-		
-		String newTempContext = contextxml.replace("@mongostore@", WTFPreferences.getUsername());
-		File fileContext = new File(contextDir + "/conf/context.xml");
-		org.apache.commons.io.FileUtils.writeStringToFile(fileContext, newTempContext);
-		
-		// Primero escribo el server xml
-		org.apache.commons.io.FileUtils.deleteQuietly(new File(System.getProperty("java.io.tmpdir") + "/temp_server.xml"));
-		if (serverxml == null) {
-			InputStream is = LaunchTomcat.class.getResourceAsStream("server.xml");
-			String tempServer = IOUtils.toString(is);
-			serverxml = tempServer;
-			is.close();
-		}
-		String newTempServer = serverxml.replace("@contextpath@", webappname);
-		newTempServer = newTempServer.replace("@appbase@", appBase);
-		newTempServer = newTempServer.replace("@serverport@", serverPort);
-		newTempServer = newTempServer.replace("@httpport@", port);
-		newTempServer = newTempServer.replace("@httpsport@", httpsPort);
-		newTempServer = newTempServer.replace("@docbase@", docbase);
-		newTempServer = newTempServer.replace("@workdir@", workdir);
-		newTempServer = newTempServer.replace("@contextcontent@", contextContent);	
-		
-		File f = new File(System.getProperty("java.io.tmpdir") + "/temp_server.xml");
-		org.apache.commons.io.FileUtils.writeStringToFile(f, newTempServer);
-		
-		// copio las librerias de mongo si no estan
-		File mongoStore = JavaCore.getClasspathVariable("TOMCAT6_HOME").append("lib").append("mongo-store-proxy-1.6.jar").toFile();
-		if (!mongoStore.exists()) {
-			InputStream is = LaunchTomcat.class.getResourceAsStream("mongo-store-proxy-1.6.jar");
-			FileOutputStream fout= new FileOutputStream(mongoStore);
-			IOUtils.copy(is, fout);
-			is.close();
-			fout.close();
-		}
-		File mongoDriver = JavaCore.getClasspathVariable("TOMCAT6_HOME").append("lib").append("mongo-java-driver-2.10.1.jar").toFile();
-		if (!mongoDriver.exists()) {
-			InputStream is = LaunchTomcat.class.getResourceAsStream("mongo-java-driver-2.10.1.jar");
-			FileOutputStream fout= new FileOutputStream(mongoDriver);
-			IOUtils.copy(is, fout);
-			is.close();
-			fout.close();
-		}
-		
-		IJavaProject javaProject = JavaCore.create(project);
-		IRuntimeClasspathEntry projectOutputPath = JavaRuntime.newProjectRuntimeClasspathEntry(javaProject);
-		classpath.add(projectOutputPath.getMemento());
-		
-//			classpath.add("<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?><runtimeClasspathEntry path=\"/home/mgodoy/gitorious/test_plugin/wtf/wtf-service-web/target/classes\" type=\"1\"/>");
-		addToClasspath(classpath, javaProject);
-		
-		String jvmArgsParams = jvmArgs;
-		if (jvmArgsParams != null) {
-			int beginIndex = jvmArgsParams.indexOf(":3306/") + 6;
-			if (beginIndex != -1) {
-				String first = jvmArgsParams.substring(0, beginIndex);
-				String second = jvmArgsParams.substring(jvmArgsParams.indexOf("?", beginIndex));
-				jvmArgsParams = first + WTFPreferences.getUsername() + second;
-			}
+		if ("7".equals(WTFPreferences.getTomcatVersion())) {
+			LaunchTomcat7.launchTomcat(project, webappname, port, httpsPort, serverPort, contextContent, jvmArgs);
 		} else {
-			jvmArgsParams = "";
-		}
-		
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_CLASSPATH, classpath);
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_DEFAULT_CLASSPATH, false);
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_VM_ARGUMENTS, "-Djava.endorsed.dirs=\"..\\common\\endorsed\""
-				+ "-Dcatalina.base=\"..\"" + "-Dcatalina.home=\"..\"" + "-Djava.io.tmpdir=\"..\\temp\" " + (jvmArgsParams));
-		
-		
-		File workingDir = JavaCore.getClasspathVariable("TOMCAT6_HOME").append("bin").toFile();
-		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_WORKING_DIRECTORY, workingDir.getAbsolutePath());
-		ILaunchConfiguration configuration = workingCopy.doSave();
-		DebugUITools.launch(configuration, ILaunchManager.DEBUG_MODE);
-	}
-
-	public static void addToClasspath( List classpath, IJavaProject javaProject) throws JavaModelException, CoreException {
-		IClasspathEntry[] entries = javaProject.getRawClasspath(); 
-		int index = 0;
-		for (IClasspathEntry classpathEntry : entries) {
-			if (classpathEntry.getEntryKind() != IClasspathEntry.CPE_SOURCE) {
-				if (classpathEntry.getEntryKind() != IClasspathEntry.CPE_CONTAINER) {
-					if (classpathEntry.getEntryKind() == IClasspathEntry.CPE_PROJECT) {
-						IPath path = classpathEntry.getPath();
-						String projectName = path.lastSegment();
-						IProject refProject = ResourcesPlugin.getWorkspace().getRoot().getProject(projectName);
-						IJavaProject refProjectJava = JavaCore.create(refProject);
-						addToClasspath(classpath, refProjectJava);
-					}
-					classpath.add(new RuntimeClasspathEntry(classpathEntry).getMemento());
-				}
-			}
+			LaunchTomcat6.launchTomcat(project, webappname, port, httpsPort, serverPort, contextContent, jvmArgs);
 		}
 	}
 
-	public static void addTomcatJarToClasspath(List classpath, String jar) throws CoreException {
-		IPath jspapijar = new Path("TOMCAT6_HOME").append("lib").append(jar);
-		IRuntimeClasspathEntry jspapijarEntry = JavaRuntime.newVariableRuntimeClasspathEntry(jspapijar);
-		classpath.add(jspapijarEntry.getMemento());
-	}
+
 
 	public void init(IWorkbenchWindow window) {
 		// TODO Auto-generated method stub
